syntax = "proto3";
option go_package = "./proto";

service NodeService{
  rpc Create(NodeRequest) returns (SuccessResponse);
  rpc Delete(SingleNodeRequest) returns (SuccessResponse);
  rpc Update(UpdateNodeRequest) returns (SuccessResponse);
  rpc FindNodeById(SingleNodeRequest) returns (NodeResponse);
  rpc FindNodesByRefId(ReferencedIdRequest) returns (MultipleNodeResponse);
}

message NodeRequest {
  string Name = 1;
  string Description = 2;
  repeated int64 Links = 3;
  uint64 ReferencedId = 4;
  bool PlayerVisible = 5;
  string Service = 6;
}

message UpdateNodeRequest {
  uint64 id = 1;
  string Name = 2;
  string Description = 3;
  repeated int64 Links = 4;
  uint64 ReferencedId = 5;
  bool PlayerVisible = 6;
  string Service = 7;
}

message SuccessResponse{
  string response = 1;
  int64 id = 2;
}

message SingleNodeRequest{
  uint64 id =1;
}

message NodeResponse{
  int64 id = 1;
  string Name = 2;
  string Service = 7;
  repeated NodeResponse Links = 4;

  string Description = 3;
  uint64 ReferencedId = 5;
  bool PlayerVisible =6;
}

message ReferencedIdRequest{
  int64  id = 1;
}
message  MultipleNodeResponse{
  repeated NodeResponse nodes = 1;
}